# auth-service-rust

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
migrations/: 20250514120000_create_users.sql
src/: config.rs  error.rs  jwt.rs  lib.rs  main.rs  state.rs
src/config/: env.rs  mod.rs  mode.rs
src/domain/: user.rs
src/error/: mod.rs
src/http/: mod.rs  openapi.rs  routes.rs  schemas.rs
src/http/handlers/: auth.rs  health.rs  mod.rs
src/http/middleware/: auth.rs  mod.rs  redact.rs  request_log.rs
src/modes/: mod.rs
src/modes/api/: mod.rs  server.rs  wiring.rs
src/modes/cron/: mod.rs  scheduler.rs  task.rs
src/modes/worker/: handler.rs  kafka.rs  mod.rs
src/repository/: mod.rs  mongo_user_repository.rs  mysql_user_repository.rs  user_repository.rs
src/service/: auth.rs  mod.rs
