[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
async-trait = "0.1"
argon2 = "0.5"
bson = { version = "2", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9"
# Worker mode: requires librdkafka on the system (e.g. `brew install librdkafka`).
rdkafka = { version = "0.36", features = ["tokio"] }
mongodb = "3.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
